--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,16 @@
 				<artifactId>gatling-maven-plugin</artifactId>
 				<version>${gatling-maven-plugin.version}</version>
 			</plugin>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+					<fork>true</fork>
+					<executable>\usr\bin\javac</executable>
+				</configuration>
+			</plugin>
 		</plugins>
 		<finalName>employee</finalName>
 	</build>
